@@ -57,9 +57,10 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // [수정] 환경변수에서 가져온 문자열을 콤마로 쪼개서 리스트로 변환
-        // 예: "http://localhost:7777,http://172.30.1.70:7777" -> List<String>
-        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        configuration.setAllowedOrigins(List.of(
+                "http://localhost:7777",
+                "http://172.30.1.70:7777" // 이 주소가 반드시 있어야 함
+        ));
 
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
